# discord_bot_rust

./: .gitignore  Cargo.toml
commands_macro/: Cargo.toml
commands_macro/src/: lib.rs
macros/src/: lib.rs
src/: error.rs  main.rs  markov.rs
src/commands/: 8ball.rs  aon.rs  gelbooru.rs  mod.rs  ping.rs  register.rs  roll.rs  shares.rs
src/commands/shares/: perks.rs
src/events/: cache_ready.rs  guild_scheduled_event_create.rs  guild_scheduled_event_delete.rs  guild_scheduled_event_update.rs  interaction_create.rs  message.rs  mod.rs  ready.rs  voice_state_update.rs
