[package]
name = "discord_bot_rust"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macros = { path = "macros" }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
rand = "0.8"
serde = "1.0"
rmp-serde = "1.1"
env_logger = "0.10"
log = "0.4"

[dependencies.serenity]
default-features = false
features = ["builder", "cache", "client", "gateway", "model", "rustls_backend"]
version = "0.11"
