[package]
name = "discord_bot_rust"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
rand = "0.8"
serde = "1"
rmp-serde = "1"
env_logger = "0.10"
log = "0.4"
anyhow = "1"
reqwest = { version = "0.11", features = ["json"] }

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
default-features = false
features = ["builder", "cache", "client", "gateway", "model", "rustls_backend"]
branch = "next"

[dependencies.poise]
git = "https://github.com/serenity-rs/poise"
features = ["cache"]
branch = "serenity-next"
